[package]
name = "libsecp256k1"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
libsecp256k1-core = { version = "0.1.0", path = "core", default-features = false }
ecc = { version = "0.1.0", path = "elliptic-curve-cryptography" }
arrayref = "0.3.7"
rand = { version = "0.8.5", default-features = false }
digest = "0.10.7"
hmac-drbg = { version = "0.3.0", optional = true }
sha2 = { version = "0.9", optional = true, default-features = false }
typenum = { version = "1.12.0", optional = true }
serde = { version = "1.0.104", features = ["derive"], default-features = false }
lazy_static = { version = "1.4.0", optional = true }
base64 = { version = "0.13.0", default-features = false }
finite-fields = { version = "0.1.0", path = "finite-fields" }

[dev-dependencies]
secp256k1-test = {package = "secp256k1", version = "0.20.3",  features = ["rand-std", "recovery"] }
clear_on_drop = "0.2"
serde_json = "1.0"
hex = "0.4"
hex-literal = "0.3.3"
bincode = "1.3.3"

[build-dependencies]
libsecp256k1-gen-ecmult = { version = "0.1.0", path = "gen/ecmult" }
libsecp256k1-gen-genmult = { version = "0.1.0", path = "gen/genmult" }

[features]
default = ["std", "hmac", "static-context"]
std = ["libsecp256k1-core/std", "sha2/std", "rand/std", "serde/std", "base64/std"]
hmac = ["hmac-drbg", "sha2", "typenum"]
static-context = []
lazy-static-context = ["static-context", "lazy_static", "std"]
