[package]
name = "nonblocking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio={version="1.29.1",features = ["full"] }
#tokio = { version = "1.32.0", features = ["rt", "macros"] }
futures = "0.3.5"
futures-timer = "3.0.2"
warp = "0.3"