[package]
name = "timer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version= "1.15.0", features = ["full","time"] }
dotenv = "0.15.0"
web3 = "0.17.0"
warp = "0.3"

log = "0.4.8"
pretty_env_logger = "0.4"
log4rs = { version="1", features = ["background_rotation"]}