[package]
name = "zkpccwallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version= "1.15.0", features = ["full","time"] }
# tokio-timer = { version = "0.2.13"}
warp = "0.3"
hex = "0.4"
web3 = "0.17.0"
dotenv = "0.15.0"
impl-codec = "0.5.0"
chrono = { version = "0.4", features = ["serde"] }
## ethers = { version = "0.6.2", features = ["abigen"] }
## ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "master", features = ["abigen"] }
ethane={version="1.0.2", features=["blocking"]}
ethane-abi = "1.0.2"
ethane-types = "1.0.2"
#proc-macro2 ="1.0.33"
once_cell = "1.4.1"
secp256k1 = { version = "0.20", features = ["recovery"]} 
ethabi = "15.0.0"
ethereum-types = "0.12.1"
lazy_static="1.4.0"
futures = "0.3.5"
futures-timer = "3.0.2"
#timer=""
hex-literal="0.3.4"

# Serde
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_derive = "1.0"
uuid = { version = "0.8.2", features = ["serde", "v4"]}
# serde = "0.9"
# serde_derive = "0.9"
# serde_json = "0.9"


# Pretty_env_logger uses env_logger and env_logger uses log.
# So, you just need to know how to use pretty_env_logger mostly.
# Log, debug etc.
log = "0.4.8"
pretty_env_logger = "0.4"
log4rs = { version="1", features = ["background_rotation"]}

num-bigint = "0.4.2"

# WASM
wasm-bindgen = { version = "0.2.68", optional = true, features = ["serde-serialize"] }
wasm-bindgen-futures = { version = "0.4.18", optional = true }


[dev-dependencies]
# For examples
env_logger = "0.9"
hex-literal = "0.3"
wasm-bindgen-test = "0.3.19"