[package]
name = "pestzok"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.3.0"
void = "1.0"
pest = "2.5"
log = "0.4.6"
pest_derive = "2.5"
pest-ast = "0.3.3"
from-pest="0.3.2"

[[bin]]
name = "pestzok"
path = "src/pestzok.rs"

[lib]
path = "src/lib.rs"