# [package]
# name = "btcaddressex"
# version = "0.1.0"
# edition = "2018"

cargo-features = ["edition2021"]

[package]
name = "genaddr"
version = "0.1.0"
license = "GPL-3.0"
authors = ["zy731@hotmail.com"]
description = "Generate BTC addresses"
edition = "2021"

[dependencies]
log = "0.4.17"
env_logger = "0.9.1"
app_dirs = "2.0.1"
libc = "0.2"
# clap = { version = "2", features = ["yaml"] }
# chain = { path = "chain" }
keys = { path = "keys" }
# message = { path = "message" }
# network = { path = "network" }
# miner = { path = "miner" }
# p2p = { path = "p2p" }
# script = { path = "script" }
# db = { path = "db" }
# verification = { path = "verification" }
# sync = { path = "sync" }
# import = { path = "import" }
# logs = { path = "logs" }
# rpc = { path = "rpc" }
primitives = { path = "primitives" }


[[bin]]
path = "genaddr/main.rs"
name = "genaddr"

[workspace]
members =[
  "crypto",
  "keys",
  "primitives"
  # "genaddr"
]

