[package]
name = "libsecp256k1-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subtle = { version = "2.5.0", default-features = false }
crunchy = "0.2.2"
digest = "0.10.7"

[features]
default = ["std"]
std = ["subtle/std"]
