[package]
name = "elliptic-curves"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
finite-fields = { path = "../finite-fields" }
num-bigint = { version = "0.4.3", features = ["rand"] }
num-traits = "0.2.16"
sha2 = "0.10.1"
hex = "0.4.3"
rand = "0.8.5"
num-integer = "0.1.45"
ripemd = "0.1.3"
