[package]
name = "networking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elliptic-curves = { path = "../elliptic-curves" }
block = { path = "../block" }
hex = "0.4.3"
num-bigint = { version = "0.4.3", features = ["rand"] }
num-traits = "0.2.16"
rand = "0.8.5"
